[gd_scene load_steps=10 format=3 uid="uid://coqb0sbyl8oty"]

[ext_resource type="Script" path="res://code/player.gd" id="1_22g62"]
[ext_resource type="Texture2D" uid="uid://8ue26ga36pgu" path="res://placeholders/pexels-rdne-8540256.jpg" id="2_lo8bo"]
[ext_resource type="PackedScene" uid="uid://d2lxra1fevbay" path="res://scenes/gun.tscn" id="3_r57ql"]
[ext_resource type="AudioStream" uid="uid://84nhlgt1vypx" path="res://sounds/275151__bird_man__gun-shot.wav" id="5_5osbi"]
[ext_resource type="Script" path="res://code/HurtBox.gd" id="5_64dta"]
[ext_resource type="StyleBox" uid="uid://btwf4g6s2xing" path="res://UI Resources/progress_bar_background.tres" id="5_n4qn2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_voy11"]
radius = 32.5576

[sub_resource type="CircleShape2D" id="CircleShape2D_nk2yn"]
radius = 29.0172

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e2wqp"]
bg_color = Color(0.388235, 0.8, 0.372549, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="RigidBody2D" type="RigidBody2D"]
position = Vector2(0, 2)
collision_layer = 2
gravity_scale = 0.0
lock_rotation = true
linear_damp = 3.0
script = ExtResource("1_22g62")

[node name="joey" type="Sprite2D" parent="."]
position = Vector2(-1, -3.1978)
scale = Vector2(0.09375, 0.0620879)
texture = ExtResource("2_lo8bo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_voy11")

[node name="WeaponHolder" type="Marker2D" parent="."]

[node name="Gun" parent="WeaponHolder" instance=ExtResource("3_r57ql")]
position = Vector2(72, -4)
rotation = 0.00658154

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="gunshot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_5osbi")
pitch_scale = 2.59
panning_strength = 3.0

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-1, 17)
scale = Vector2(4.2, 5.8)

[node name="HurtBox" type="Area2D" parent="." groups=["player_hurtbox"]]
collision_mask = 2
script = ExtResource("5_64dta")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(-1, 0)
shape = SubResource("CircleShape2D_nk2yn")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HealthBar" type="ProgressBar" parent="UI"]
layout_mode = 0
offset_left = -80.0
offset_top = -128.0
offset_right = 80.0
offset_bottom = -101.0
theme_override_styles/background = ExtResource("5_n4qn2")
theme_override_styles/fill = SubResource("StyleBoxFlat_e2wqp")
show_percentage = false

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="body_entered" from="HurtBox" to="." method="_on_hurt_box_body_entered"]
[connection signal="body_exited" from="HurtBox" to="." method="_on_hurt_box_body_exited"]
